--- a/src/styles.css
+++ b/src/styles.css
@@ -100,4 +100,29 @@ body {
     left: 0;
 }
 
+.dots {
+    height: 20px;
+    width: 80px;
+    background-color: rgba(0,0,0);
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transform: translate(50%, 0);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.dot_one, .dot_two, .dot_three {
+    height: 10px;
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0.692);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.visible_dot {
+    background-color: white !important;
+}
+
 
